--- a/index.html
+++ b/index.html
@@ -7,55 +7,75 @@
     <title>Good Eats- Street Tacos</title>
 </head>
 <body>
-Street Tacos
-Save  (save svg)
-Share (share svg)
-Print (print svg)
-Jump to Recipe (jump svg)
+    <header>
+        <h1>Street Tacos</h1>
 
-(street-tacos.png)
+        <nav>
+            <ul>
+                <li><a href="#">Save  (save svg)</a></li>
+                <li><a href="#">Share (share svg)</a></li>
+                <li><a href="#">Print (print svg)</a></li>
+                <li><a href="#">Jump to Recipe (jump svg)</a></li>
+            </ul>
+        </nav>
 
-Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!
+        <img src="images/street-tacos.png" alt="A photo of tacos">
 
-These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!!
-Details
-Prep Time: 10 minutes
-Cook Time: 10 minutes
-Total Time: 20 minutes
-Author: Taco Cheesington
-Servings: 6 Tacos
-Ingredients
-Flank steak
-Soy Sauce
-Worcestershire sauce
-Lime
-Minced garlic
-Cilantro
-Chili powder
-Cumin
-Salt
-Pepper 
-Corn tortillas
-Directions
-Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.
-Marinate: Add the steak and let marinate in the fridge for 1-2 hours.
-Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.
-Add toppings: Put the steak in the center of your tortilla with desired toppings.
+        <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
+
+        <p>These street tacos are completely jam-packed with flavor and they are so easy to make. I love how the meat is so tender and juicy and only takes an hour to marinate! If you absolutely love tacos like me, try out these other amazing taco recipes! These taco-stuffed avocados, Baja fish tacos, and ground beef tacos will not disappoint!! </p>
+    </header>
+    <section>
+        <h2>Details</h2>
+        <div class="details">
+            <p>Prep Time: 10 minutes</p>
+            <p>Cook Time: 10 minutes</p>
+            <p>Total Time: 20 minutes</p>
+            <p>Author: Taco Cheesington</p>
+            <p>Servings: 6 Tacos</p>
+        </div>
+
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Flank steak</li>
+                <li>Soy Sauce</li>
+                <li>Worcestershire sauce</li>
+                <li>Lime</li>
+                <li>Minced garlic</li>
+                <li>Cilantro</li>
+                <li>Chili powder</li>
+                <li>Cumin</li>
+                <li>Salt</li>
+                <li>Pepper </li>
+                <li>Corn tortillas</li>
+            </ul>
+        </div>
+        <div>
+            <h2>Directions</h2>
+            <ol>
+                <li>Cut and mix: Cut the flank steak into one inch pieces. In a medium sized bowl add the soy sauce, Worcestershire, juice from one lime, cilantro, chili powder, cumin, and salt and pepper.</li>
+                <li>Marinate: Add the steak and let marinate in the fridge for 1-2 hours.</li>
+                <li>Cook the meat: Heat a medium sized skillet to medium high heat. Add the steak and marinade and cook for about 5-7 minutes or until no longer pink.</li>
+                <li>Add toppings: Put the steak in the center of your tortilla with desired toppings.</li>
+            </ol>
+        </div>
+    </section>
 Need some side dishes?
 Mexican Rice
-(mexican-rice.png)
+<img src="images/mexican-rice.png" alt="A photo of mexican rice">
 Traditional recipe with a twist.
 Rating: 4 of 5 Stars 
 Salsa
-(salsa.png)
+<img src="images/salsa.png" alt="Salsa on a serving board">
 Just the right amount of spice.
 Rating: 5 of 5 Stars 
 Guacamole
-(guacamole.png)
+<img src="images/guacamole.png" alt="A bowl of guacamole">
 Fresh and healthy.
 Rating: 4 of 5 Stars 
 Tortillas
-(tortillas.png)
+<img src="images/tortillas.png" alt="A stack of tortillas">
 Easy to make and so good. 
 Rating: 4 of 5 Stars 
 Main Navigation (hamburger svg)
@@ -78,7 +98,7 @@ Tik Tok (tiktok svg)
 Good Eats 
 Copyright 2022 
 Taco Cheesington
-(Taco-cheesington.png)
+<img src="images/Taco-cheesington.png" alt="A chef garnishing a dish">
 
 </body>
 </html>
